; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/miscfs/deadfs/extr_dead_vnops.c_dead_blktooff.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/miscfs/deadfs/extr_dead_vnops.c_dead_blktooff.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vnop_blktooff_args = type { i64*, i32 }

@EIO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dead_blktooff(%struct.vnop_blktooff_args* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.vnop_blktooff_args*, align 8
  store %struct.vnop_blktooff_args* %0, %struct.vnop_blktooff_args** %3, align 8
  %4 = load %struct.vnop_blktooff_args*, %struct.vnop_blktooff_args** %3, align 8
  %5 = getelementptr inbounds %struct.vnop_blktooff_args, %struct.vnop_blktooff_args* %4, i32 0, i32 1
  %6 = load i32, i32* %5, align 8
  %7 = call i32 @chkvnlock(i32 %6)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %11, label %9

9:                                                ; preds = %1
  %10 = load i32, i32* @EIO, align 4
  store i32 %10, i32* %2, align 4
  br label %15

11:                                               ; preds = %1
  %12 = load %struct.vnop_blktooff_args*, %struct.vnop_blktooff_args** %3, align 8
  %13 = getelementptr inbounds %struct.vnop_blktooff_args, %struct.vnop_blktooff_args* %12, i32 0, i32 0
  %14 = load i64*, i64** %13, align 8
  store i64 -1, i64* %14, align 8
  store i32 0, i32* %2, align 4
  br label %15

15:                                               ; preds = %11, %9
  %16 = load i32, i32* %2, align 4
  ret i32 %16
}

declare dso_local i32 @chkvnlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
